syntax = "proto3";

option csharp_namespace = "GamingHub.UserService.gRPC.V1";
package Services;

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc GetUserByPhoneNumber(GetUserByPhoneNumberRequest) returns (UserResponse);
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByPhoneNumberRequest{
  string phone_number = 1;
}

message UserResponse {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string user_name = 4;
  string phone_number = 5;
  string email = 6;
  string address = 7;
  string post_code = 8;
  string birthday = 9;
  UserStatus status = 10;
}

enum UserStatus
{
  Disabled = 0;
  Active = 1;
  Expired = 2;
  Deleted = 3;
}